# nix

./: .gitignore  .gitmodules  AGENTS.md  NEXTSTEPS.md  README.md  flake.lock.bak  flake.nix  lam.nix  result
docs/: audit-followups.md  filer-titlebar-buttons-plan.md  top-impact-c89c625.md
filer/: README.md  ROADMAP.md  flake.nix  hyprvtb-bottomtext.patch  main.py  run.sh
filer/qml/: BrowserButton.qml  BrowserConfirm.qml  ImageViewer.qml  Main.qml  PreviewTile.qml
home/: default.nix  plasma.nix
home/pkgs/: base.nix  claude-sessions.sh  cli.nix  dev.nix  game.nix  game.nix.bak  game.nix2.bak
home/prog/: askpass.nix  bash.nix  fastfetch.nix  filer.nix  hypr-host.nix  hyprland.nix  hyprvtb.nix  kitty.nix  mpv.nix  quickshell.nix  qutebrowser.nix  slskd.nix  surfer.nix  viewer.nix  vista-click.nix  zsh.nix
home/prog/hyprvtb/: CMakeLists.txt  VtbPassElement.cpp  VtbPassElement.hpp  default.nix  globals.hpp  main.cpp  vtbDeco.cpp  vtbDeco.hpp  vtbIpc.cpp  vtbIpc.hpp
home/srvs/: easyeffects.nix  udiskie.nix  vista-sounds.nix  wal.nix
hosts/blet/: default.nix  hardware-configuration.nix
hosts/top/: configuration.nix  default.nix  hardware-configuration.nix
modules/home/: plasma.nix
pkgs/: custom.nix
pylib/: kitty-vtb.py  vtbclient.py
surfer/: main.py
surfer/qml/: BrowserButton.qml  ContextMenu.qml  Main.qml  PixelText.qml  Slider.qml
sys/: base.nix  disks.nix  nixos-rebuild.nix  options.nix  users.nix
sys/dsk/: hyprland.nix  plasma.nix
sys/hw/: nvidia.nix
viewer/: flake.nix  main.py
viewer/qml/: ImageViewer.qml  Main.qml
(+104 files in other folders)
